Fix some weird spacing problem

--- a/src/modules/navbar/styles.css
+++ b/src/modules/navbar/styles.css
@@ -26,6 +26,7 @@ nav.navbar-top {
 
     position: relative;
     height: 100%;
+    width: min-content;
 }nav.navbar-top > .nav-links .profile-image {
     height: 100%;
     border-radius: 50%;
